src/test/resources/testcases/invalid/types/void_operand_binary.tc
void foo() {
    return;
}
int main() {
    int x = 1 + foo(); // Error: binary operator operands cannot be void
    return 0;
}
